# open-wearables

backend/: pyproject.toml
backend-rs/migrations/: 20260625053546_core_identity_auth.down.sql  20260625053546_core_identity_auth.up.sql  20260625053555_provider_connections.down.sql  20260625053555_provider_connections.up.sql  20260625053559_data_sources_series.down.sql  20260625053559_data_sources_series.up.sql  20260625053603_event_records_details.down.sql  20260625053603_event_records_details.up.sql  20260625053607_health_scores.down.sql  20260625053607_health_scores.up.sql  20260625053611_archive_tables.down.sql  20260625053611_archive_tables.up.sql  20260625053614_seed_reference_data.down.sql  20260625053614_seed_reference_data.up.sql
backend/app/api/routes/v1/: summaries.py
backend/app/constants/webhooks/: events.py  test_payloads.py
backend/app/repositories/: archival_repository.py  data_point_series_repository.py  event_record_repository.py
backend/app/schemas/enums/: aggregation_method.py  series_types.py
backend/app/schemas/providers/polar/: daily_activity.py
backend/app/schemas/responses/activity/: data_point_responses.py
backend/app/schemas/webhooks/: event_types.py
backend/app/services/: summaries_service.py  system_info_service.py
backend/app/services/outgoing_webhooks/: events.py
backend/app/services/providers/garmin/: coverage.py  data_247.py
backend/app/services/providers/garmin/handlers/: lifecycle.py
backend/app/services/providers/oura/: coverage.py  data_247.py
backend/app/services/providers/polar/: coverage.py
backend/app/services/providers/templates/: base_oauth.py
backend/app/services/providers/ultrahuman/: coverage.py  data_247.py
backend/app/utils/: sentry_helpers.py
backend/tests/: factories.py
backend/tests/api/v1/: test_summaries.py
backend/tests/providers/suunto/: test_suunto_webhook_handler.py
backend/tests/services/: test_user_data_summary.py
docs/api-reference/guides/: webhooks.mdx
docs/architecture/: data-types.mdx
docs/scores/: resilience-score.mdx
frontend/: package.json
frontend/src/components/ui/: date-filter.tsx
frontend/src/components/user/: activity-section.tsx  data-summary-section.tsx
frontend/src/hooks/api/: use-health.ts
frontend/src/lib/api/: types.ts
frontend/src/lib/api/services/: health.service.ts
frontend/src/lib/query/: keys.ts
